@@ -181,9 +181,6 @@ showtitle = true
 # Set this to display only the graph data - no axes, grid, or legend
 #graphonly = true
 
-# Set this to fix the graph scale
-#fixedscale = true
-
 # These list services that should follow the maximum or minimum value returned,
 # instead of the average. The values must match the service_description values
 # in the Nagios configuration.
